Tweak to debian/. No using ./configure to run qmake.

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AC_PROG_MAKE_SET
 #AC_PROG_INSTALL
 AC_CONFIG_FILES(files.h:files.h.in)
 AC_CONFIG_FILES(conf/init.d/wifigatewaysrv:conf/init.d/wifigatewaysrv.in)
+AC_CONFIG_COMMANDS([qmake],[qmake -makefile -nocache QMAKE_STRIP=: PREFIX=$prefix],[prefix=$prefix])
 CWD=`eval echo \`pwd\``
 AC_SUBST(CWD, "$CWD")
 AC_OUTPUT
