--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: wifigateway-server
 Section: unknown
 Priority: extra
-Maintainer: sam <sam@localdomain>
+Maintainer: sam <sam@localhost>
 Build-Depends: debhelper (>= 8.0.0), autotools-dev
 Standards-Version: 3.9.3
 Homepage: <insert the upstream URL, if relevant>
