Added debian/control deps. Added reference conf. No default firewall. Minor other refactor and docs.

--- a/conf/dnsmasq.conf
+++ b/conf/dnsmasq.conf
@@ -1,11 +1,14 @@
+# Assuming this host is 10.1.2.1 and wifi card is wlan0.
 # DNS and DHCP but on this interface.
-interface=eth0
-# Don't read resolv.conf. Allow hosts lookup though.
+interface=wlan0
+# Don't read resolv.conf.
 no-resolv
+# Allow hosts lookup though. Might be useful.
 # no-hosts
 # Return this hosts address for all DNS requests.
-address=/#/10.1.3.1
-dhcp-option=3,10.1.3.1
+address=/#/10.1.2.1
+dhcp-option=3,10.1.2.1
 # Set the DNS for hosts that ask to not this.
 dhcp-option=6,8.8.8.8
 log-dhcp
+dhcp-range=10.1.2.16,10.1.2.254,255.255.255.0,1h
