--- a/conf/hostapd.conf
+++ b/conf/hostapd.conf
@@ -1,5 +1,19 @@
-#change wlan0 to your wireless device
+# Assuming wlan0 is the WiFi card.
 interface=wlan0
 driver=nl80211
-ssid=test
-channel=1
+hw_mode=g
+ssid=WifiGateway
+channel=11
+# 802.11n
+#wme_enabled=1
+#ieee80211n=1
+#ht_capab=[HT40+][SHORT-GI-40][DSSS_CCK-40]
+# Auth - there is none!
+macaddr_acl=0
+auth_algs=1
+#ignore_broadcast_ssid=0
+wpa=2
+wpa_passphrase=testings
+wpa_key_mgmt=WPA-PSK
+wpa_pairwise=TKIP
+rsn_pairwise=CCMP
