--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,13 @@ Source: wifigateway-server
 Section: unknown
 Priority: extra
 Maintainer: sam <sam@localhost>
-Build-Depends: debhelper (>= 8.0.0), autotools-dev
+Build-Depends: debhelper (>= 8.0.0), autotools-dev, libqt4-dev (>= 4:4.5), libqt4-test
 Standards-Version: 3.9.3
-Homepage: <insert the upstream URL, if relevant>
 #Vcs-Git: git://git.debian.org/collab-maint/wifigateway-server.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/wifigateway-server.git;a=summary
 
 Package: wifigateway-server
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-core, iptables
+Recommends: dnsmasq, hostapd, hostap-utils, php5-cli
+Description: Provides a simple daemon that controls Internet access for peers connecting to an access point or LAN.
