--- a/debian/wifigateway-server/DEBIAN/control
+++ b/debian/wifigateway-server/DEBIAN/control
@@ -2,10 +2,9 @@ Package: wifigateway-server
 Version: 0.1-1
 Architecture: amd64
 Maintainer: sam <sam@localhost>
-Installed-Size: 186
-Depends: libc6 (>= 2.2.5), libgcc1 (>= 1:4.1.1), libqt4-dbus (>= 4:4.5.3), libqtcore4 (>= 4:4.8.0), libstdc++6 (>= 4.1.1)
+Installed-Size: 164
+Depends: libc6 (>= 2.2.5), libgcc1 (>= 1:4.1.1), libqt4-dbus (>= 4:4.5.3), libqtcore4 (>= 4:4.8.0), libstdc++6 (>= 4.1.1), libqt4-core, iptables
+Recommends: dnsmasq, hostapd, hostap-utils, php5-cli
 Section: unknown
 Priority: extra
-Homepage: <insert the upstream URL, if relevant>
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Provides a simple daemon that controls Internet access for peers connecting to an access point or LAN.
